add qq version 8.7.0